force-app/main/default/objects/Advance__c/fields/Property_Count__c.field-meta.xml
<CustomField>
    <fullName>Property_Count__c</fullName>
    <label>Property Count</label>
    <summaryForeignKey>Property_Advance__c.Advance__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>