force-app/main/default/objects/Advance__c/fields/Property_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Record_Type__c</fullName>
    <label>Property Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Renovation</fullName>
            </value>
            <value>
                <fullName>Single Asset w/ Renovation</fullName>
            </value>
            <value>
                <fullName>Non-Renovation</fullName>
            </value>
            <value>
                <fullName>Ground Up Construction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>