force-app/main/default/objects/Advance__c/fields/Purchase_Funded_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Funded_Date__c</fullName>
    <description>If this is an Initial Advance, this will reflect the Purchase Date of the Loan, otherwise it will reflect the Wire Date</description>
    <formula>IF(
 CONTAINS(RecordType.Name, &quot;Initial&quot;),
 Deal__r.Purchase_Date__c,
 Wire_Date__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this is an Initial Advance, this will reflect the Purchase Date of the Loan, otherwise it will reflect the Wire Date</inlineHelpText>
    <label>Purchase/Funded Date</label>
    <type>Date</type>
</CustomField>