force-app/main/default/objects/Advance__c/fields/Purchase_Price_Total__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price_Total__c</fullName>
    <label>Acquisition Price Total</label>
    <summarizedField>Property_Advance__c.Purchase_Price__c</summarizedField>
    <summaryForeignKey>Property_Advance__c.Advance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>