force-app/main/default/objects/Advance__c/fields/Recourse__c.field-meta.xml
<CustomField>
    <fullName>Recourse__c</fullName>
    <description>Recourse from the Deal</description>
    <formula>TEXT(Deal__r.Recourse__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recourse</label>
    <type>Text</type>
</CustomField>