force-app/main/default/objects/Advance__c/fields/Rehab_Holdback_Limit__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Holdback_Limit__c</fullName>
    <formula>ROUND(Holdback_Amount_Total__c / Approved_Advance_Amount_Total__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rehab Holdback Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>