force-app/main/default/objects/Advance__c/fields/Remaining_Interest_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Interest_Reserve__c</fullName>
    <formula>Deal__r.Remaining_Interest_Reserves__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Interest Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>