force-app/main/default/objects/Advance__c/fields/Renovation_Reserve_Total__c.field-meta.xml
<CustomField>
    <fullName>Renovation_Reserve_Total__c</fullName>
    <description>Total amount of Renovation Funding for this Advance</description>
    <inlineHelpText>Total amount of Renovation Funding for this Advance</inlineHelpText>
    <label>Renovation Advance Total</label>
    <summarizedField>Property_Advance__c.Renovation_Reserve__c</summarizedField>
    <summaryForeignKey>Property_Advance__c.Advance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>