force-app/main/default/objects/Advance__c/fields/Report_Fee_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Report_Fee_Adjustment__c</fullName>
    <description>Allows staff to manually add to or subtract from the Report Fee Subtotal on the Advance to update the Report Fee Total</description>
    <label>Report Fee Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>