force-app/main/default/objects/Advance__c/fields/Report_Fee_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Report_Fee_Subtotal__c</fullName>
    <description>Roll up summary field of the Report Fee Total on the property advance object</description>
    <label>Report Fee Subtotal</label>
    <summarizedField>Property_Advance__c.Report_Fee_Total__c</summarizedField>
    <summaryForeignKey>Property_Advance__c.Advance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>