force-app/main/default/objects/Advance__c/fields/Report_Fee_Total__c.field-meta.xml
<CustomField>
    <fullName>Report_Fee_Total__c</fullName>
    <description>Sums the Report Fee Adjustment and Report Fee Subtotal fields on the advance</description>
    <formula>Report_Fee_Subtotal__c +  Report_Fee_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sums the Report Fee Subtotal plus Report Fee Adjustment fields</inlineHelpText>
    <label>Report Fee Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>