force-app/main/default/objects/Advance__c/fields/Report_Fees_Netted__c.field-meta.xml
<CustomField>
    <fullName>Report_Fees_Netted__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the Reports Fees are included/excluded in the Net Wire Amount</description>
    <inlineHelpText>Indicates if the Reports Fees are included/excluded in the Net Wire Amount</inlineHelpText>
    <label>Report Fees Netted</label>
    <type>Checkbox</type>
</CustomField>