force-app/main/default/objects/Advance__c/fields/Requires_IC_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_IC_Approval__c</fullName>
    <formula>OR(
TEXT(Deal__r.StageName) = &apos;Loan Processing&apos;,
TEXT(Deal__r.StageName) = &apos;Processing Hold&apos;,
TEXT(Deal__r.StageName) = &apos;Underwriting&apos;,
TEXT(Deal__r.StageName) = &apos;UW Hold&apos;,
TEXT(Deal__r.StageName) = &apos;Approved by Committee&apos;,
TEXT(Deal__r.StageName) = &apos;Closed Won&apos;
) &amp;&amp;
OR (
 Deal_RecordType__c = &apos;LOC_Loan&apos;,
  Deal_RecordType__c =&apos;Single_Asset_Bridge_Loan&apos;,
  Deal_RecordType__c =&apos;Table_Funded_CRE_Loan_Active&apos;,
  Deal_RecordType__c =&apos;Table_Funded_CRE_Loan&apos;,
  Deal_RecordType__c =&apos;Acquired_Bridge_Loan&apos;,
  Deal_RecordType__c =&apos;Acquired_Bridge_Loan_Active&apos;
) &amp;&amp;
Loan_Type__c = &apos;Credit Line&apos;
&amp;&amp;
Approved_Advance_Amount_Max_Total__c &gt;= 1000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requires IC Approval</label>
    <type>Checkbox</type>
</CustomField>