force-app/main/default/objects/Advance__c/fields/Revolving_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Revolving_Y_N__c</fullName>
    <description>Revolving from the Deal</description>
    <formula>TEXT(Deal__r.Revolving1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revolving (Y/N)</label>
    <type>Text</type>
</CustomField>