force-app/main/default/objects/Advance__c/fields/Servicer_Name__c.field-meta.xml
<CustomField>
    <fullName>Servicer_Name__c</fullName>
    <formula>TEXT(Deal__r.Servicer_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Servicer Name</label>
    <type>Text</type>
</CustomField>