force-app/main/default/objects/Advance__c/fields/Servicing_Fee_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Fee_Adjustment__c</fullName>
    <label>Servicing Fee Adjustment</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>