force-app/main/default/objects/Advance__c/fields/Servicing_Fee_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Fee_Subtotal__c</fullName>
    <label>Servicing Fee Subtotal</label>
    <summarizedField>Property_Advance__c.Servicing_Fee__c</summarizedField>
    <summaryForeignKey>Property_Advance__c.Advance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>