force-app/main/default/objects/Advance__c/fields/Servicing_Fee_Total__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Fee_Total__c</fullName>
    <formula>Servicing_Fee_Adjustment__c + Servicing_Fee_Subtotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Servicing Fee Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>