force-app/main/default/objects/Advance__c/fields/Show_Inspection_Fee_Column__c.field-meta.xml
<CustomField>
    <fullName>Show_Inspection_Fee_Column__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls if the Inspection Fee column shows up in the Grid</description>
    <inlineHelpText>Controls if the Inspection Fee column shows up in the Grid</inlineHelpText>
    <label>Show Inspection Fee Column</label>
    <type>Checkbox</type>
</CustomField>