force-app/main/default/objects/Advance__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <formula>Deal__r.Account_Introduction_Source__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source</label>
    <type>Text</type>
</CustomField>