force-app/main/default/objects/Advance__c/fields/Target_Advance_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Advance_Date__c</fullName>
    <description>Date that the Borrower is requested to receive the funding</description>
    <inlineHelpText>Date that the Borrower is requested to receive the funding</inlineHelpText>
    <label>Requested Funding Date</label>
    <type>Date</type>
</CustomField>