force-app/main/default/objects/Advance__c/fields/Title_Review_Company__c.field-meta.xml
<CustomField>
    <fullName>Title_Review_Company__c</fullName>
    <label>Title Review Company</label>
    <length>60</length>
    <type>Text</type>
</CustomField>