force-app/main/default/objects/Advance__c/fields/Total_Cost_Basis_Total__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Basis_Total__c</fullName>
    <label>Total Cost Basis Total</label>
    <summarizedField>Property_Advance__c.Total_Cost_Basis__c</summarizedField>
    <summaryForeignKey>Property_Advance__c.Advance__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>