force-app/main/default/objects/Advance__c/fields/Total_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Fees__c</fullName>
    <description>Total All Fees</description>
    <formula>Origination_Fee_Total__c + Advance_Fee_Total__c + BPO_Appraisal_Fee_Total__c + Doc_Prep_Fee_Total__c + BlackSquare_Fee_Total__c + Daily_Interest_Rate_Total__c + Inspection_Fee_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total All Fees</inlineHelpText>
    <label>Total Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>