force-app/main/default/objects/Advance__c/fields/Total_Initial_LTC__c.field-meta.xml
<CustomField>
    <fullName>Total_Initial_LTC__c</fullName>
    <formula>Initial_Disbursement_Total__c / Purchase_Price_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Initial LTC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>