force-app/main/default/objects/Advance__c/fields/Total_Interest_Reserves__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Reserves__c</fullName>
    <formula>Deal__r.Interest_Reserves__c</formula>
    <inlineHelpText>New Formula, gathered from deal record</inlineHelpText>
    <label>Total Interest Reserves</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>