force-app/main/default/objects/Advance__c/fields/Total_Loan_LTC__c.field-meta.xml
<CustomField>
    <fullName>Total_Loan_LTC__c</fullName>
    <formula>ROUND(Approved_Advance_Amount_Total__c/Purchase_Price_Total__c, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Loan LTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>