force-app/main/default/objects/Advance__c/fields/Total_LTC_Total__c.field-meta.xml
<CustomField>
    <fullName>Total_LTC_Total__c</fullName>
    <formula>Approved_Advance_Amount_Total__c /  Total_Cost_Basis_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total LTC Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>