force-app/main/default/objects/Advance__c/fields/Warehouse_Line__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Line__c</fullName>
    <formula>TEXT(Deal__r.Warehouse_Line__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse Line</label>
    <type>Text</type>
</CustomField>