force-app/main/default/objects/Advance__c/fields/Warehouse_Line_New__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Line_New__c</fullName>
    <label>Warehouse Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2021-RTL1</fullName>
            </value>
            <value>
                <fullName>2022-RTL1</fullName>
            </value>
            <value>
                <fullName>Churchill</fullName>
            </value>
            <value>
                <fullName>Credit Suisse</fullName>
            </value>
            <value>
                <fullName>Deutsche Bank</fullName>
            </value>
            <value>
                <fullName>Fortress</fullName>
            </value>
            <value>
                <fullName>Goldman Sachs</fullName>
            </value>
            <value>
                <fullName>Morgan Stanley</fullName>
            </value>
            <value>
                <fullName>Morgan Stanley Static</fullName>
            </value>
            <value>
                <fullName>Nomura</fullName>
            </value>
            <value>
                <fullName>Securitization</fullName>
            </value>
            <value>
                <fullName>Signature</fullName>
            </value>
            <value>
                <fullName>Wells Fargo</fullName>
            </value>
            <value>
                <fullName>Wells Fargo CRE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>