force-app/main/default/objects/Advance__c/fields/Wire_Fee_Total__c.field-meta.xml
<CustomField>
    <fullName>Wire_Fee_Total__c</fullName>
    <formula>Wire_Fee_Adjustment__c + Wire_Fee_Subtotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wire Fee Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>