force-app/main/default/objects/Advance__c/fields/WireDateYear__c.field-meta.xml
<CustomField>
    <fullName>WireDateYear__c</fullName>
    <businessOwnerGroup>Bridge_Ops</businessOwnerGroup>
    <description>This formula field returns the value present in the &quot;Wire Date&quot; field on the advance. This is used for grouping dashboard reports.</description>
    <formula>Wire_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used For Dashboard Reports.</inlineHelpText>
    <label>Wire Date Year</label>
    <type>Date</type>
</CustomField>