force-app/main/default/objects/Advance__c/fields/X1st_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Due_Date__c</fullName>
    <description>Used to calculate the 1st payment due date Statebridge Servicer Onboarding Tape.
It&apos;s one full month + day 10 after the wire date.</description>
    <formula>IF(MONTH(Wire_Date__c ) &lt; 11, 
DATE(YEAR(Wire_Date__c ),MONTH(Wire_Date__c ) + 2, 10), 
DATE(YEAR(Wire_Date__c ) + 1,MONTH(Wire_Date__c ) - 10, 10))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to calculate the 1st payment due date Statebridge Servicer Onboarding Tape.
It&apos;s one full month + day 10 after the wire date.</inlineHelpText>
    <label>1st Due Date</label>
    <type>Date</type>
</CustomField>