force-app/main/default/objects/Advance__c/recordTypes/Construction_Advance.recordType-meta.xml
<RecordType>
    <fullName>Construction_Advance</fullName>
    <active>true</active>
    <label>Construction Advance</label>
</RecordType>