force-app/main/default/objects/Advance__c/recordTypes/Construction_Draw.recordType-meta.xml
<RecordType>
    <fullName>Construction_Draw</fullName>
    <active>true</active>
    <label>Construction Draw</label>
</RecordType>