force-app/main/default/objects/Advance__c/recordTypes/Interest_Reserve.recordType-meta.xml
<RecordType>
    <fullName>Interest_Reserve</fullName>
    <active>true</active>
    <label>Interest Reserve</label>
</RecordType>