force-app/main/default/objects/Advance__c/recordTypes/Non_Renovation_Initial.recordType-meta.xml
<RecordType>
    <fullName>Non_Renovation_Initial</fullName>
    <active>true</active>
    <label>Non Renovation Initial</label>
</RecordType>