force-app/main/default/objects/Advance__c/recordTypes/Renovation_Initial.recordType-meta.xml
<RecordType>
    <fullName>Renovation_Initial</fullName>
    <active>true</active>
    <label>Renovation Initial</label>
</RecordType>