force-app/main/default/objects/Advance__c/validationRules/Completed_Validatoin_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_Validatoin_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &apos;Completed&apos;) &amp;&amp;  ISBLANK(Wire_Date__c)</errorConditionFormula>
    <errorDisplayField>Wire_Date__c</errorDisplayField>
    <errorMessage>Wire Date must be populated</errorMessage>
</ValidationRule>