force-app/main/default/objects/Advance__c/validationRules/Require_Exception_Detailed_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Exception_Detailed_Description</fullName>
    <active>true</active>
    <description>This will require that the Exception Detailed Description is populated if the Exception Type is &quot;Other&quot;</description>
    <errorConditionFormula>AND(
 ISCHANGED( Exception_Type__c ) ,
 ISPICKVAL( Exception_Type__c , &apos;Other&apos;) ,
 ISBLANK( Exception_Detailed_Description__c )
)</errorConditionFormula>
    <errorDisplayField>Exception_Detailed_Description__c</errorDisplayField>
    <errorMessage>The Exception Detailed Description is required when Exception Type is &quot;Other&quot;</errorMessage>
</ValidationRule>