force-app/main/default/objects/Advance__c/validationRules/Require_LOC_Commitment_before_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_LOC_Commitment_before_Complete</fullName>
    <active>true</active>
    <description>This will require that the LOC Commitment on the Deal has been populated before an Advance can be completed</description>
    <errorConditionFormula>AND(
 CONTAINS( Deal__r.Record_Type_Name__c , &apos;LOC_Loan&apos;),
 ISBLANK( Deal__r.LOC_Commitment__c ),
 ISPICKVAL( Status__c , &apos;Completed&apos;),
 NOT ( $Profile.Name= &quot;System Administrator&quot;)
)</errorConditionFormula>
    <errorMessage>LOC Commitment on the Deal is required before an Advance can be Completed</errorMessage>
</ValidationRule>