force-app/main/default/objects/Advance__c/validationRules/Restrict_Advance_Number_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Advance_Number_Change</fullName>
    <active>true</active>
    <description>This will prevent certain users from changing the Advance #</description>
    <errorConditionFormula>AND(
ISCHANGED(Name),

 $Permission.Update_Advance_Number = FALSE,
 NOT($Profile.Name = &quot;System Administrator&quot;)
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You are not authorized to update the Advance #</errorMessage>
</ValidationRule>