force-app/main/default/objects/Advance__c/listViews/My_Open_Advances.listView-meta.xml
<ListView>
    <fullName>My_Open_Advances</fullName>
    <columns>NAME</columns>
    <columns>Deal__c</columns>
    <columns>Status__c</columns>
    <columns>Target_Advance_Date__c</columns>
    <columns>Expired__c</columns>
    <columns>Days_Remaining__c</columns>
    <columns>Aggregate_Funding__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending,Received,Hold,Pending Inspection,Pending Inspection Report Revision,Pending Approval,Pending Capital Partner Release,Pending Release</value>
    </filters>
    <filters>
        <field>Is_Assigned_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Open Advances</label>
</ListView>