force-app/main/default/objects/Advance__c/listViews/Pending_Advances.listView-meta.xml
<ListView>
    <fullName>Pending_Advances</fullName>
    <columns>NAME</columns>
    <columns>Deal__c</columns>
    <columns>Status__c</columns>
    <columns>Target_Advance_Date__c</columns>
    <columns>Expired__c</columns>
    <columns>Days_Remaining__c</columns>
    <columns>Amount__c</columns>
    <columns>Aggregate_Funding__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Advances</label>
</ListView>