force-app/main/default/objects/Advance__c/listViews/Recent_Advances.listView-meta.xml
<ListView>
    <fullName>Recent_Advances</fullName>
    <columns>NAME</columns>
    <columns>Deal__c</columns>
    <columns>Status__c</columns>
    <columns>Wire_Date__c</columns>
    <columns>Expired__c</columns>
    <columns>Days_Remaining__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Aggregate_Funding__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Origination_Fee_Subtotal__c</columns>
    <columns>Origination_Fee_Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Recent Advances</label>
    <sharedTo>
        <role>Administrator</role>
    </sharedTo>
</ListView>